# huffman

./: CMakeLists.txt
console_utility/: CMakeLists.txt  main.cpp
tests/: huffman_testing.cpp
